--- a/SampleApp.csproj
+++ b/SampleApp.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.2.7" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.7" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.7" />
+	<None Update="Tools\ffmpeg.exe">
+    	<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  	</None>
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Include="Avalonia.Diagnostics" Version="11.2.7">
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
