--- a/SampleApp.csproj
+++ b/SampleApp.csproj
@@ -21,5 +21,7 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
+    <PackageReference Include="MessageBox.Avalonia.Markdown" Version="3.2.0" />
   </ItemGroup>
 </Project>
